--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,13 +26,28 @@
                     android:layout_marginEnd="@dimen/_17pxh"
                     android:layout_marginStart="@dimen/_17pxh" android:layout_width="@dimen/_289pxh"/>
             </LinearLayout>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:orientation="vertical"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                itemSpace="@dimen/_1pxh" tools:itemCount="11" tools:listitem="@layout/search_item"/>
+
+            /*
+                <SearchView
+                    android:id="@+id/search_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:iconifiedByDefault="false"
+                    android:queryHint="장소 검색"/>
+
+                */
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    itemSpace="@dimen/_1pxh" tools:itemCount="11" tools:listitem="@layout/search_item"/>
+
         </LinearLayout>
     </LinearLayout>
 </layout>
