--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
+    <style name="txtPretendardbold27">
+        <item name="android:textSize">@dimen/_27pxh</item>
+        <item name="android:textColor">@color/black_900</item>
+        <item name="android:fontFamily">@font/pretendard</item>
+        <item name="android:textFontWeight" tools:targetApi="p">700</item>
+    </style>
+    <style name="txtPretendardbold16">
+        <item name="android:textSize">@dimen/_16pxh</item>
+        <item name="android:textColor">@color/white_A700</item>
+        <item name="android:fontFamily">@font/pretendard</item>
+        <item name="android:textFontWeight" tools:targetApi="p">700</item>
+    </style>
+    <style name="txtPretendardbold15">
+        <item name="android:textSize">@dimen/_15pxh</item>
+        <item name="android:textColor">@color/black_900</item>
+        <item name="android:fontFamily">@font/pretendard</item>
+        <item name="android:textFontWeight" tools:targetApi="p">700</item>
+    </style>
+    <style name="txtPretendardsemibold15">
+        <item name="android:textSize">@dimen/_15pxh</item>
+        <item name="android:textColor">@color/black_900</item>
+        <item name="android:fontFamily">@font/pretendard</item>
+        <item name="android:textFontWeight" tools:targetApi="p">600</item>
+    </style>
+    <style name="groupStylewhite_1">
+        <item name="android:background">@drawable/rectangle_bg_white_a700_border_black_900_19</item>
+    </style>
+    <style name="etPretendardregular13">
+        <item name="android:textSize">@dimen/_14pxh</item>
+        <item name="android:textColor">@color/black_900</item>
+        <item name="android:fontFamily">@font/pretendard</item>
+        <item name="android:textFontWeight" tools:targetApi="p">400</item>
+    </style>
+    <style name="txtPretendardregular13">
+        <item name="android:textSize">@dimen/_13pxh</item>
+        <item name="android:textColor">@color/black_900</item>
+        <item name="android:fontFamily">@font/pretendard</item>
+        <item name="android:textFontWeight" tools:targetApi="p">400</item>
+    </style>
+    <style name="txtPretendardbold16_1">
+        <item name="android:textSize">@dimen/_16pxh</item>
+        <item name="android:textColor">@color/black_900</item>
+        <item name="android:fontFamily">@font/pretendard</item>
+        <item name="android:textFontWeight" tools:targetApi="p">700</item>
+    </style>
+
+    <style name="groupStyledeep_orange_A400_96cornerRadius">
+        <item name="android:background">@drawable/rectangle_bg_deep_orange_a400_96_radius_5</item>
+        <item name="android:textSize">@dimen/_16pxh</item>
+        <item name="android:textColor">@color/white_A700</item>
+        <item name="android:fontFamily">@font/pretendard</item>
+        <item name="android:textFontWeight" tools:targetApi="p">700</item>
+    </style>
+
     <style name="txtInterregular15">
         <item name="android:textSize">@dimen/_15pxh</item>
         <item name="android:textColor">@color/black_900</item>
@@ -148,9 +202,6 @@
     <style name="groupStyleblue_3">
         <item name="android:background">@drawable/rectangle_bg_blue_a100_radius_8</item>
     </style>
-    <style name="groupStylewhite_1">
-        <item name="android:background">@drawable/rectangle_bg_white_a700_border_black_900_19</item>
-    </style>
     <style name="groupStylewhite_3">
         <item name="android:background">@drawable/rectangle_bg_white_a700_border_white_a700</item>
     </style>
@@ -207,12 +258,7 @@
         <item name="android:textFontWeight" tools:targetApi="p">600</item>
         <item name="android:background">@drawable/rectangle_bg_black_900</item>
     </style>
-    <style name="txtPretendardbold15">
-        <item name="android:textSize">@dimen/_15pxh</item>
-        <item name="android:textColor">@color/black_900</item>
-        <item name="android:fontFamily">@font/pretendard</item>
-        <item name="android:textFontWeight" tools:targetApi="p">700</item>
-    </style>
+
     <style name="txtPretendardblack25">
         <item name="android:textSize">@dimen/_25pxh</item>
         <item name="android:textColor">@color/black_900</item>
